[gd_scene load_steps=10 format=2]

[ext_resource path="res://Game.gd" type="Script" id=1]
[ext_resource path="res://Mob.tscn" type="PackedScene" id=2]
[ext_resource path="res://art/brinstone.png" type="Texture" id=3]
[ext_resource path="res://Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://Mover.tscn" type="PackedScene" id=5]
[ext_resource path="res://tiles/navtiles.tres" type="TileSet" id=6]
[ext_resource path="res://art/roughtiles.tres" type="TileSet" id=7]

[sub_resource type="SegmentShape2D" id=2]

custom_solver_bias = 0.0
a = Vector2( 0, -1000 )
b = Vector2( 0, 0 )

[sub_resource type="Curve2D" id=3]

bake_interval = 5.0
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -1, 0, 0, 0, 0, 0, 639, 0 )
}

[node name="Game" type="Node2D" index="0"]

script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [  ],
"_edit_vertical_guides_": [  ]
}
Mob = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="." index="0"]

visible = false
show_behind_parent = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 640.0
margin_bottom = 480.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.466347, 0.857714, 0.955078, 1 )
_sections_unfolded = [ "Anchor", "Hint", "Margin", "Rect", "Size Flags", "Visibility" ]

[node name="TextureRect" type="TextureRect" parent="." index="1"]

modulate = Color( 1, 1, 1, 0.196078 )
show_behind_parent = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 640.0
margin_bottom = 480.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 1
texture = ExtResource( 3 )
stretch_mode = 2
_sections_unfolded = [ "Material", "Visibility" ]

[node name="Player" parent="." index="2" instance=ExtResource( 4 )]

show_behind_parent = true
position = Vector2( 245, 412 )
_sections_unfolded = [ "Angular", "Applied Forces", "Collision", "Linear", "Transform", "Visibility" ]

[node name="ScreenLeft" type="StaticBody2D" parent="." index="3"]

editor/display_folded = true
position = Vector2( 0, 500 )
input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.5
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ScreenLeft" index="0"]

shape = SubResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="ScreenRight" type="StaticBody2D" parent="." index="4"]

editor/display_folded = true
position = Vector2( 640, 500 )
input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.5
_sections_unfolded = [ "Collision", "Transform" ]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="ScreenRight" index="0"]

shape = SubResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="Mover" parent="." index="5" instance=ExtResource( 5 )]

position = Vector2( 437, 409 )
motion = Vector2( 0, 16 )
cycle = 16.0

[node name="Mover2" parent="." index="6" instance=ExtResource( 5 )]

position = Vector2( 246, 434 )
motion = Vector2( 16, 0 )
cycle = 8.0

[node name="Navigation2D" type="Navigation2D" parent="." index="7"]

editor/display_folded = true

[node name="TileMap" type="TileMap" parent="Navigation2D" index="0"]

visible = false
mode = 0
tile_set = ExtResource( 6 )
cell_size = Vector2( 16, 16 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 1
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray( 524288, 0, 0, 524289, 0, 0, 524290, 0, 0, 524291, 0, 0, 524292, 0, 0, 524293, 0, 0, 524294, 0, 0, 524295, 0, 0, 524296, 0, 0, 524297, 0, 0, 589824, 0, 0, 589825, 0, 0, 589826, 0, 0, 589827, 0, 0, 589828, 0, 0, 589832, 0, 0, 589833, 0, 0 )

[node name="TileMap" type="TileMap" parent="." index="8"]

position = Vector2( 0, 240 )
mode = 0
tile_set = ExtResource( 7 )
cell_size = Vector2( 16, 16 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = true
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 1
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray( 458773, 3, 0, 458774, 4, 0, 458775, 2, 0, 524309, 9, 0, 524310, 10, 0, 524311, 11, 0, 589828, 18, 0, 589829, 21, 0, 589830, 21, 0, 589831, 21, 0, 589832, 39, 0, 589845, 15, 0, 589846, 16, 0, 589847, 17, 0, 655360, 21, 0, 655361, 21, 0, 655362, 21, 0, 655363, 21, 0, 655364, 26, 0, 655365, 31, 0, 655366, 31, 0, 655367, 0, 0, 655368, 1, 0, 655369, 1, 0, 655370, 1, 0, 655371, 2, 0, 655378, 23, 0, 655379, 24, 0, 720896, 31, 0, 720897, 31, 0, 720898, 31, 0, 720899, 31, 0, 720900, 34, 0, 720903, 6, 0, 720904, 10, 0, 720905, 10, 0, 720906, 10, 0, 720907, 8, 0, 720912, 23, 0, 720913, 24, 0, 720914, 26, 0, 720915, 26, 0, 786439, 12, 0, 786440, 7, 0, 786441, 7, 0, 786442, 7, 0, 786443, 14, 0, 786446, 23, 0, 786447, 24, 0, 786448, 26, 0, 786449, 26, 0, 786450, 26, 0, 786451, 26, 0, 851968, 1, 0, 851969, 1, 0, 851970, 1, 0, 851971, 1, 0, 851972, 1, 0, 851973, 1, 0, 851974, 1, 0, 851975, 1, 0, 851976, 1, 0, 851977, 1, 0, 851978, 1, 0, 851979, 1, 0, 851980, 1, 0, 851981, 1, 0, 851982, 1, 0, 851983, 1, 0, 851984, 1, 0, 851985, 1, 0, 851986, 1, 0, 851987, 1, 0, 851988, 1, 0, 851989, 1, 0, 851990, 1, 0, 851991, 1, 0, 851992, 1, 0, 851993, 1, 0, 851994, 1, 0, 851995, 1, 0, 851996, 1, 0, 851997, 1, 0, 851998, 1, 0, 851999, 1, 0, 852000, 1, 0, 852001, 1, 0, 852002, 1, 0, 852003, 1, 0, 852004, 1, 0, 852005, 1, 0, 852006, 1, 0, 852007, 1, 0, 917504, 10, 0, 917505, 10, 0, 917506, 10, 0, 917507, 10, 0, 917508, 10, 0, 917509, 10, 0, 917510, 10, 0, 917511, 10, 0, 917512, 10, 0, 917513, 10, 0, 917514, 10, 0, 917515, 10, 0, 917516, 10, 0, 917517, 10, 0, 917518, 10, 0, 917519, 10, 0, 917520, 10, 0, 917521, 10, 0, 917522, 10, 0, 917523, 10, 0, 917524, 10, 0, 917525, 10, 0, 917526, 10, 0, 917527, 10, 0, 917528, 10, 0, 917529, 10, 0, 917530, 10, 0, 917531, 10, 0, 917532, 10, 0, 917533, 10, 0, 917534, 10, 0, 917535, 10, 0, 917536, 10, 0, 917537, 10, 0, 917538, 10, 0, 917539, 10, 0, 917540, 10, 0, 917541, 10, 0, 917542, 10, 0, 917543, 10, 0 )
_sections_unfolded = [ "Transform" ]

[node name="MobPath" type="Path2D" parent="." index="9"]

self_modulate = Color( 0.5, 0.6, 1, 0.7 )
position = Vector2( 1, 0 )
curve = SubResource( 3 )

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath" index="0"]

position = Vector2( -1, 0 )
offset = 0.0
h_offset = 0.0
v_offset = 0.0
rotate = true
cubic_interp = true
loop = true
lookahead = 4.0

[node name="MobSpawnTimer" type="Timer" parent="." index="10"]

process_mode = 1
wait_time = 0.25
one_shot = false
autostart = false

[connection signal="timeout" from="MobSpawnTimer" to="." method="_on_MobSpawnTimer_timeout"]


